chore: Rename missed mod names

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -50,8 +50,8 @@ body:
   - type: input
     id: aether-enhanced-extinguishing-ver
     attributes:
-      label: The Aether: Enhanced Extinguishing Version
-      description: What version of Aether: Enhanced Extinguishing are you running? This can be found on the jar file you have downloaded or the Mod Options menu. Please note "latest" is NOT a version.
+      label: The Aether Enhanced Extinguishing Version
+      description: What version of The Aether Enhanced Extinguishing are you running? This can be found on the jar file you have downloaded or the Mod Options menu. Please note "latest" is NOT a version.
       placeholder: "1.1.1"
     validations:
       required: true
