chore: Improve naming; add description

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.daemon=false
 
 # Mod
 mod_id=aether_enhanced_extinguishing
-mod_name=The Aether: Enhanced Extinguishing
+mod_name=Enhanced Extinguishing
 mod_version=0.0.1
 mc_version=1.19.4
 forge_version=45.1.0
