improv: Pick block works properly

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,6 +6,8 @@ license = "Assets: All Rights Reserved; Code: LGPL-3.0"
 modId = "aether_enhanced_extinguishing"
 version = "${file.jarVersion}"
 displayName = "Enhanced Extinguishing"
+displayURL = "https://modrinth.com/mod/aether-enhanced-extinguishing"
+logoFile ="enhanced_extinguishing_icon.png"
 credits = "The Aether Team"
 authors = "bconlon"
 description = '''Improves the consistency of fire being disallowed in the Aether by adding new extinguished variants of blocks.'''
