chore: Publishing properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,6 @@ aether_version=1.19.4-1.0.0-beta.5.1-forge
 curios_version=1.19.4-5.1.5.3
 
 # Publishing
-#curseforge_id=255308
-#modrinth_id=YhmgMVyu
-#version_type=beta
+curseforge_id=884860
+modrinth_id=FDrEl7QY
+version_type=release
