--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,13 +17,20 @@ jobs:
     steps:
       - setup
       - run: |
-          gradle publish
+          chmod +x ./gradlew
+          ./gradlew publish
 
 commands:
   setup:
     steps:
       - checkout
-      - run: gradle build --console=plain
+      - gradle/with_cache:
+          cache_key: 'v1'
+          steps:
+            - run:
+                name: chmod permissions
+                command: chmod +x ./gradlew
+            - run: ./gradlew build --parallel --console=plain
       - store_artifacts:
           path: ~/project/build/libs
 
@@ -39,6 +46,7 @@ workflows:
       - publish:
           context:
             - maven
+            - publishing
           filters:
             tags:
               only:
