--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -3,11 +3,6 @@ version: 2.1
 orbs:
   gradle: circleci/gradle@3.0.0
 
-parameters:
-  artifact-name:
-    type: string
-    default: aether_enhanced_extinguishing
-
 jobs:
   build:
     machine:
@@ -18,16 +13,18 @@ jobs:
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.logging.level=info
     steps:
       - setup
-      - persist_to_workspace:
-          root: ~/project/build/libs
-          paths:
-            - << pipeline.parameters.artifact-name >>-*.jar
 
 commands:
   setup:
     steps:
       - checkout
-      - run: gradle build --console=plain
+      - gradle/with_cache:
+          cache_key: 'v1'
+          steps:
+            - run:
+                name: chmod permissions
+                command: chmod +x ./gradlew
+            - run: ./gradlew build --parallel --console=plain
       - store_artifacts:
           path: ~/project/build/libs
 
