--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ mod_name=Enhanced Extinguishing
 mod_version=1.0.0
 mc_version=1.19.4
 forge_version=45.1.0
-mappings=1.19.3-2023.03.12-1.19.4
+mappings=2023.06.26-1.19.4
 
 # Dependencies
 aether_version=1.19.4-1.0.0-beta.5.1-forge
