--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,11 +1,13 @@
 modLoader = "javafml"
 loaderVersion = "[45,)"
 license = "Assets: All Rights Reserved; Code: LGPL-3.0"
+issueTrackerURL="https://github.com/The-Aether-Team/Enhanced-Extinguishing/issues"
 
 [[mods]]
 modId = "aether_enhanced_extinguishing"
 version = "${file.jarVersion}"
 displayName = "Enhanced Extinguishing"
+updateJSONURL="https://github.com/The-Aether-Team/Enhanced-Extinguishing/raw/1.19.4-develop/update.json"
 displayURL = "https://modrinth.com/mod/aether-enhanced-extinguishing"
 logoFile ="enhanced_extinguishing_icon.png"
 credits = "The Aether Team"
@@ -22,12 +24,6 @@ side = "BOTH"
 modId = "aether"
 mandatory = true
 versionRange = "[1.19.4-1.0.0-beta.5.1-forge,)"
-ordering = "NONE"
-side = "BOTH"
-[[dependencies.aether_enhanced_extinguishing]]
-modId = "curios"
-mandatory = true
-versionRange = "[1.19.4-5.1.3.1,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.aether_enhanced_extinguishing]]
