--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,14 @@ org.gradle.daemon=false
 mod_id=aether_enhanced_extinguishing
 mod_name=Enhanced Extinguishing
 mod_version=1.0.0
-mc_version=1.19.4
-forge_version=45.1.0
-mappings=2023.06.26-1.19.4
+mc_version=1.20.1
+neoforge_version=47.1.70
+mappings=2023.08.20-1.20.1
 
 # Dependencies
-aether_version=1.19.4-1.0.0-beta.5.1-forge
-curios_version=1.19.4-5.1.5.3
+aether_version=1.20.1-1.0.0-beta.1-neoforge
+nitrogen_version=1.20.1-0.1.2-neoforge
+curios_version=5.3.1
 
 # Publishing
 curseforge_id=884860
