--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ minecraft {
 
             property "${mod_id}.iside", 'true'
             property 'forge.logging.console.level', 'info'
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
 
             mods {
                 "${mod_id}" {
