--- a/gradle.properties
+++ b/gradle.properties
@@ -7,14 +7,14 @@ org.gradle.daemon=false
 mod_id=aether_enhanced_extinguishing
 mod_name=Enhanced Extinguishing
 mod_version=1.0.0
-mc_version=1.20.1
-neoforge_version=47.1.70
-mappings=2023.08.20-1.20.1
+mc_version=1.20.2
+neoforge_version=20.2.88
+mappings=2023.12.10
 
 # Dependencies
-aether_version=1.20.1-1.0.0-beta.1-neoforge
-nitrogen_version=1.20.1-0.1.2-neoforge
-curios_version=5.3.1
+aether_version=1.20.2-1.3.1-neoforge
+nitrogen_version=1.20.2-1.0.23-neoforge
+curios_version=6.1.0
 
 # Publishing
 curseforge_id=884860
