--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[47,)"
+loaderVersion = "[1,)"
 license = "Assets: All Rights Reserved; Code: LGPL-3.0"
 issueTrackerURL="https://github.com/The-Aether-Team/Enhanced-Extinguishing/issues"
 
@@ -7,7 +7,7 @@ issueTrackerURL="https://github.com/The-Aether-Team/Enhanced-Extinguishing/issue
 modId = "aether_enhanced_extinguishing"
 version = "${file.jarVersion}"
 displayName = "Enhanced Extinguishing"
-updateJSONURL="https://github.com/The-Aether-Team/Enhanced-Extinguishing/raw/1.20.1-develop/update.json"
+updateJSONURL="https://github.com/The-Aether-Team/Enhanced-Extinguishing/raw/1.20.2-develop/update.json"
 displayURL = "https://modrinth.com/mod/aether-enhanced-extinguishing"
 logoFile ="enhanced_extinguishing_icon.png"
 credits = "The Aether Team"
@@ -15,20 +15,20 @@ authors = "bconlon"
 description = '''Improves the consistency of fire being disallowed in the Aether by adding new extinguished variants of blocks.'''
 
 [[dependencies.aether_enhanced_extinguishing]]
-modId = "forge"
-mandatory = true
-versionRange = "[47.1.0,]"
-ordering = "NONE"
-side = "BOTH"
+    modId="neoforge"
+    mandatory=true
+    versionRange="[20.2.0,)"
+    ordering="NONE"
+    side="BOTH"
 [[dependencies.aether_enhanced_extinguishing]]
-modId = "aether"
-mandatory = true
-versionRange = "[1.20.1-1.0.0-beta.1-forge,)"
-ordering = "NONE"
-side = "BOTH"
+    modId = "aether"
+    mandatory = true
+    versionRange = "[1.20.1-1.0.0-beta.1-forge,)"
+    ordering = "NONE"
+    side = "BOTH"
 [[dependencies.aether_enhanced_extinguishing]]
-modId = "minecraft"
-mandatory = true
-versionRange = "[1.20.1]"
-ordering = "NONE"
-side = "BOTH"
+    modId = "minecraft"
+    mandatory = true
+    versionRange="[1.20.2,1.20.3)"
+    ordering = "NONE"
+    side = "BOTH"
